# text-functions

./: text-functions.cabal
src/Data/: Rec.hs
src/Data/Rec/: Unsafe.hs
src/Data/Text/: Builder.hs  Number.hs  Stitch.hs
src/Data/Text/Lazy/Builder/: Function.hs
test/: Bench.hs  Spec.hs
