name:                text-functions
version:             0.1
synopsis:            Functions for operating on text
description:         Please see README.md
homepage:            https://github.com/andrewthad/text-functions#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Text.Lazy.Builder.Function
  build-depends:
      base >= 4.7 && < 5
    , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/text-functions
