name:                text-functions
version:             0.1
synopsis:            Functions for operating on text
description:         Please see README.md
homepage:            https://github.com/andrewthad/text-functions#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Text.Builder
    Data.Text.Lazy.Builder.Function
    Data.Text.Number
    Data.Text.Stitch
  ghc-options: -Wall -O2
  build-depends:
      base >= 4.7 && < 5
    , text
    , bytestring
    , vector
    , primitive
  default-language:    Haskell2010

benchmark criterion
  type:                exitcode-stdio-1.0
  build-depends:
      base
    , text-functions
    , criterion
    , text
    , bytestring
  ghc-options:         -Wall -O2 -ddump-rule-firings
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Bench.hs

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , text-functions
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
    , text
    , bytestring
    , HUnit
    , test-framework-hunit
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/text-functions
